--- a/casestudy.html
+++ b/casestudy.html
@@ -21,7 +21,45 @@
       <link rel="stylesheet" media="screen and (min-width:700px)" href="styles/desktop.css" />
     </head>
 <body>
-    
     <h1>CASE STUDY </h1>
+    <div>
+      <img src="http://" alt="">
+      <p> Text 1
+      </p>
+    </div>
+
+    <div>
+      <p> Text 2 left aligned
+      </p>
+      <p> Text 3 right aligned </p>
+    </div>
+
+    <div>
+      <p> Text 4 -span
+      </p>
+    </div>
+
+    <div>
+      <p> text 5 </p>
+      <img src="http://" alt="">
+    </div>
+
+    <div>
+      <img src="http://" alt="">
+      <p> text 6  </p>
+    </div>
+
+    <div>
+      <p> Text 7 -span
+      </p>
+    </div>
+
+    <div>
+      <img src="http://" alt="">
+      <img src="http://" alt="">
+      <img src="http://" alt="">
+      <img src="http://" alt="">
+    </div>
+
 </body>
 </html>
