megan did some nonsense

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<<head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Velma Portfolio</title>
@@ -22,10 +22,16 @@
 
 <h1> ABOUT </h1>
 
-<div>
-  <p> text 5 </p>
-  <img src="http://" alt="">
+<div id="aboutContainerCenter">
+<h1> About Me </h1>
+</div>
+
+<div id="aboutContainerContent">
+  <p> I will become a big vertical text box </p>
+  <img src="./images/ph.png" alt="image did not load"/>
 </div>
     
+
+
 </body>
 </html>
