--- a/index.html
+++ b/index.html
@@ -24,38 +24,37 @@
   </header>
   <h1>This is the home page</h1> 
 
-  <div>
+  <div class="HPcontainerC">
     <p>
-        Main TEXT top of the page
+        Main TEXT top of the page (FLEX-CENTERED)
     </p>
   </div>
 
-  <!-- trying to figure out how to wrap in a div -->
-<div>
-  <img src="/" alt="">
+  <div class="HPcontainerL">
+  <img src="./images/ph.png" alt="image did not load"/>
   <p>
-  Case Study Title
+  Case Study Title - Left
   </p>
 </div>
 
-<div>
-  <img src="/" alt="">
+<div class="HPcontainerR">
+  <img src="./images/ph.png" alt="image did not load"/>
   <p>
-  Case Study Title
+  Case Study Title - Right
   </p>
 </div>
 
-<div>
-  <img src="/" alt="">
+<div class="HPcontainerL">
+  <img src="./images/ph.png" alt="image did not load"/>
   <p>
-  Case Study Title
+  Case Study Title - Left
   </p>
 </div>
 
-<div>
-  <img src="/" alt="">
+<div class="HPcontainerR">
+  <img src="./images/ph.png" alt="image did not load"/>
   <p>
-  Case Study Title
+  Case Study Title - Right
   </p>
 </div>
 
