--- a/casestudy.html
+++ b/casestudy.html
@@ -1,65 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-    <header class="header">
-        <a href="" class="logo">CSS Nav</a>
-        <input class="menu-btn" type="button" id="menu-btn" />
-        <!-- We should unfuck this menu -->
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-        <ul class="menu">
-        <li><a href="/index.html">Home</a></li>
-          <li><a href="/casestudy.html">My Work</a></li>
-          <li><a href="/about.html">About</a></li>
-        </ul>
-      </header>
-    
-      <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Velma Portfolio</title>
-      <link rel="stylesheet" href="styles/style.css" />
-      <link rel="stylesheet" media="screen and (max-width:700px)" href="styles/mobile.css" />
-      <link rel="stylesheet" media="screen and (min-width:700px)" href="styles/desktop.css" />
-    </head>
-<body>
-    <h1>CASE STUDY </h1>
-    <div>
-      <img src="http://" alt="">
-      <p> Text 1
-      </p>
-    </div>
-
-    <div>
-      <p> Text 2 left aligned
-      </p>
-      <p> Text 3 right aligned </p>
-    </div>
-
-    <div>
-      <p> Text 4 -span
-      </p>
-    </div>
-
-    <div>
-      <p> text 5 </p>
-      <img src="http://" alt="">
-    </div>
-
-    <div>
-      <img src="http://" alt="">
-      <p> text 6  </p>
-    </div>
-
-    <div>
-      <p> Text 7 -span
-      </p>
-    </div>
-
-    <div>
-      <img src="http://" alt="">
-      <img src="http://" alt="">
-      <img src="http://" alt="">
-      <img src="http://" alt="">
-    </div>
-
-</body>
-</html>
+ <!DOCTYPE html>
+  <html lang="en">
+      <header class="header">
+          <a href="" class="logo">CSS Nav</a>
+          <input class="menu-btn" type="button" id="menu-btn" />
+          <!-- We should unfuck this menu -->
+          <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+          <ul class="menu">
+          <li><a href="/index.html">Home</a></li>
+            <li><a href="/casestudy.html">My Work</a></li>
+            <li><a href="/about.html">About</a></li>
+          </ul>
+        </header>
+      
+        <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Velma Portfolio</title>
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" media="screen and (max-width:700px)" href="styles/mobile.css" />
+        <link rel="stylesheet" media="screen and (min-width:700px)" href="styles/desktop.css" />
+      </head>
+  <body>
+      <h1>CASE STUDY </h1>
+      <div>
+        <img src="./images/ph.png" alt="image did not load"/>
+        <p> Text 1
+        </p>
+      </div>
+  
+      <div>
+        <p> Text 2 left aligned
+        </p>
+        <p> Text 3 right aligned </p>
+      </div>
+  
+      <div>
+        <p> Text 4 -span
+        </p>
+      </div>
+  
+      <div>
+        <p> text 5 </p>
+        <img src="./images/ph.png" alt="image did not load"/>
+      </div>
+  
+      <div>
+        <img src="./images/ph.png" alt="image did not load"/>
+        <p> text 6  </p>
+      </div>
+  
+      <div>
+        <p> Text 7 -span
+        </p>
+      </div>
+  
+      <div>
+        <img src="./images/ph.png" alt="image did not load"/>
+        <img src="./images/ph.png" alt="image did not load"/>
+        <img src="./images/ph.png" alt="image did not load"/>
+        <img src="./images/ph.png" alt="image did not load"/>
+      </div>
+  
+  </body>
+  </html>
