megan did some nonsense, it looks okay i guess

--- a/casestudy.html
+++ b/casestudy.html
@@ -22,23 +22,24 @@
       </head>
   <body>
       <h1>CASE STUDY </h1>
-      <div>
+      <div class="CScontainerCcol">
         <img src="./images/ph.png" alt="image did not load"/>
-        <p> Text 1
-        </p>
+        <p> Text 1 - span </p>
       </div>
   
-      <div>
+      <div class="CScontainerCrow">
         <p> Text 2 left aligned
         </p>
         <p> Text 3 right aligned </p>
       </div>
   
-      <div>
+      <div class="CScontainerCcol">
         <p> Text 4 -span
         </p>
       </div>
   
+      <!-- What is going on with alignment  -->
+
       <div>
         <p> text 5 </p>
         <img src="./images/ph.png" alt="image did not load"/>
@@ -49,12 +50,12 @@
         <p> text 6  </p>
       </div>
   
-      <div>
+      <div class="CScontainerCcol">
         <p> Text 7 -span
         </p>
       </div>
   
-      <div>
+      <div class="CScontainerCrow">
         <img src="./images/ph.png" alt="image did not load"/>
         <img src="./images/ph.png" alt="image did not load"/>
         <img src="./images/ph.png" alt="image did not load"/>
