--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
   </ul>
 </header>
 
+<main id="home">
 <h1> ABOUT </h1>
 
 <div id="aboutContainerCenter">
@@ -27,8 +28,11 @@
 </div>
 
 <div id="aboutContainerContent">
-  <p> I will become a big vertical text box </p>
-  <img src="./images/ph.png" alt="image did not load"/>
+  <p> Some facts about me. Before design, I was a librarian - at the time, I remember feeling like I needed more of a challenge. 
+    After that realization, I quickly transferred my organizational skills to a UX/UI skillset to help build the right product for the right user. At the end of the day, 
+    I’m someone who really prioritizes collaboration and teamwork  (with emphasis on good reason for every design decision).
+    I’m a digital product designer at work, but also a lover of true crime mysteries, fluffy dogs, anime, film photography, and interior decor. </p>
+  <img src="./images/velma 3.jpeg" alt="Velma D. Img"/>
 </div>
     
 
