--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
  
 <body>
 <header class="header">
-  <a href="" class="logo">CSS Nav</a>
+  <a href="" class="logo"></a>
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
@@ -21,7 +21,6 @@
 </header>
 
 <main id="home">
-<h1> ABOUT </h1>
 
 <div id="aboutContainerCenter">
 <h1> About Me </h1>
@@ -31,7 +30,7 @@
   <p> Some facts about me. Before design, I was a librarian - at the time, I remember feeling like I needed more of a challenge. 
     After that realization, I quickly transferred my organizational skills to a UX/UI skillset to help build the right product for the right user. At the end of the day, 
     I’m someone who really prioritizes collaboration and teamwork  (with emphasis on good reason for every design decision).
-    I’m a digital product designer at work, but also a lover of true crime mysteries, fluffy dogs, anime, film photography, and interior decor. </p>
+    I’m a UX researcher at work, but also a lover of true crime mysteries, fluffy dogs, anime, film photography, and interior decor. </p>
   <img src="./images/velma 3.jpeg" alt="Velma D. Img"/>
 </div>
     
