--- a/casestudy.html
+++ b/casestudy.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
   <html lang="en">
       <header class="header">
-          <a href="" class="logo">CSS Nav</a>
+          <a href="" class="logo"></a>
           <input class="menu-btn" type="button" id="menu-btn" />
           <!-- We should unfuck this menu -->
           <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
