--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
 <body>
   <header class="header">
-    <a href="" class="logo">CSS Nav</a>
+    <a href="" class="logo"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <!-- We should unfuck this menu -->
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -22,39 +22,49 @@
       <li><a href="/about.html">About</a></li>
     </ul>
   </header>
-  <h1>This is the home page</h1> 
+
 
   <div class="HPcontainerC">
     <p>
-        Main TEXT top of the page (FLEX-CENTERED)
+Velma D. 
+User experience researcher <img src="./images/mag.svg" alt="image did not load"/> for client projects in digital transformation and experience orchestration. 
+Work closely with strategists, design, product realization, internal thought leadership 
     </p>
   </div>
 
   <div class="HPcontainerL">
-  <img src="./images/ph.png" alt="image did not load"/>
+  <img src="./images/meridian.png" alt="image did not load"/>
   <p>
-  Case Study Title - Left
+    Meridian
+    A retail analytics and performance 
+    app to improve customer service and 
+    employee training for higher sales across regions
   </p>
 </div>
 
 <div class="HPcontainerR">
-  <img src="./images/ph.png" alt="image did not load"/>
+  <img src="./images/the bright app.png" alt="image did not load"/>
   <p>
-  Case Study Title - Right
+    The Bright App
+    A redesign of a marketing website to drive in more app 
+    downloads and communicate the app’s market value proposition to two markets
   </p>
 </div>
 
 <div class="HPcontainerL">
-  <img src="./images/ph.png" alt="image did not load"/>
+  <img src="./images/liff happens.png" alt="image did not load"/>
   <p>
-  Case Study Title - Left
+    Liff Happens
+    The total redesign of a lost-and-found 
+    application for easy staff training and shorter wait times to return items
   </p>
 </div>
 
 <div class="HPcontainerR">
-  <img src="./images/ph.png" alt="image did not load"/>
+  <img src="./images/help scout .png" alt="image did not load"/>
   <p>
-  Case Study Title - Right
+  Help Scout 
+  A redesign allowing a more native feel, reworking the UX and the UI.
   </p>
 </div>
 
