home almost done

--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
 
   <div class="HPcontainerC">
     <p>
-Velma D. 
-User experience researcher <img src="./images/mag.svg" alt="image did not load"/> for client projects in digital transformation and experience orchestration. 
-Work closely with strategists, design, product realization, internal thought leadership 
+Velma D. <br>
+User experience researcher 
+<a title="solving your design mysteries!" href="https://en.wikipedia.org/wiki/Velma_Dinkley" target="_blank" class="beFancy"
+ style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+<img src="./images/icons8-search (1).svg" alt="??" loading="eager" class="imgIntro"></a>
+for client projects in digital 
+transformation and experience orchestration. 
+Works closely with strategists, design, product realization, internal thought leadership. 
     </p>
   </div>
 
@@ -42,13 +47,16 @@ Work closely with strategists, design, product realization, internal thought lea
   </p>
 </div>
 
+
 <div class="HPcontainerR">
-  <img src="./images/the bright app.png" alt="image did not load"/>
-  <p>
-    The Bright App
-    A redesign of a marketing website to drive in more app 
-    downloads and communicate the app’s market value proposition to two markets
-  </p>
+  <div class="plzwork">
+    <img src="./images/the bright app.png" alt="image did not load"/>
+    <p>
+      The Bright App
+      A redesign of a marketing website to drive in more app 
+      downloads and communicate the app’s market value proposition to two markets
+    </p>
+  </div>
 </div>
 
 <div class="HPcontainerL">
@@ -60,13 +68,6 @@ Work closely with strategists, design, product realization, internal thought lea
   </p>
 </div>
 
-<div class="HPcontainerR">
-  <img src="./images/help scout .png" alt="image did not load"/>
-  <p>
-  Help Scout 
-  A redesign allowing a more native feel, reworking the UX and the UI.
-  </p>
-</div>
 
 <footer>
   <a href="#"> Email</a>
