--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <p> Some facts about me. Before design, I was a librarian - at the time, I remember feeling like I needed more of a challenge. 
     After that realization, I quickly transferred my organizational skills to a UX/UI skillset to help build the right product for the right user. At the end of the day, 
     I’m someone who really prioritizes collaboration and teamwork  (with emphasis on good reason for every design decision).
-    I’m a UX researcher at work, but also a lover of true crime mysteries, fluffy dogs, anime, film photography, and interior decor. </p>
+    I’m a UX designer at work, but also a lover of true crime mysteries, fluffy dogs, anime, film photography, and interior decor. </p>
   <img src="./images/velma 3.jpeg" alt="Velma D. Img"/>
 </div>
     
