--- a/casestudy.html
+++ b/casestudy.html
@@ -21,46 +21,60 @@
         <link rel="stylesheet" media="screen and (min-width:700px)" href="styles/desktop.css" />
       </head>
   <body>
-      <h1>CASE STUDY </h1>
+
       
       <div class="CScontainerCcol">
         <img src="./images/ph.png" alt="image did not load"/>
-        <p> Text 1 - span </p>
+        <p> The problem <br>
+          The first iteration of the Beacon SDK by Help Scout focused on getting 
+          the core functionality found in its web counterpart: 
+          self-service and message sending, into a mobile-friendly build. What it lacked, however, 
+          was a primary focus on the mobile experience.
+          Some design patterns were taken from the web that did not 
+          quite gel with a mobile user's expectations. I worked on making the 
+          transition to a more native feel, while reworking the UX and the UI.</p>
       </div>
   
       <div class="CScontainerCrow">
-        <p> Text 2 left aligned
+        <p> UX Designer Prototyping left aligned
         </p>
-        <p> Text 3 right aligned </p>
+        <p> 2020-2021right aligned </p>
       </div>
   
       <div class="CScontainerCcol">
-        <p> Text 4 -span
+        <p> Crafting for mobile
+          Users have come to expect specific design patterns 
+          when using their phones, even if they aren't aware of it. 
+          Searching is generally at the top; swiping left takes you back. 
+          All ingrained into us through repetition.
         </p>
       </div>
   
       <!-- What is going on with alignment  -->
 
-      <div>
+      <div class="CScontainerCrow CSmidIMG">
         <p> text 5 </p>
-        <img src="./images/ph.png" alt="image did not load"/>
+        <img src="./images/Screen Shot 2021-10-27 at 7.50.28 PM.png" alt="image did not load"/>
       </div>
   
-      <div>
-        <img src="./images/ph.png" alt="image did not load"/>
+      <div class="CScontainerCrow CSmidIMG">
+        <img src="./images/Screen Shot 2021-10-27 at 7.51.10 PM.png" alt="image did not load"/>
         <p> text 6  </p>
       </div>
   
       <div class="CScontainerCcol">
-        <p> Text 7 -span
+        <p>Help Scout's Beacon's core experience 
+          was adjusted to make it feel part of the platforms we were developing 
+          for, while maintaining Beacons' own sense of visual identity.
+
         </p>
       </div>
   
       <div class="CScontainerCrow">
-        <img src="./images/ph.png" alt="image did not load"/>
-        <img src="./images/ph.png" alt="image did not load"/>
-        <img src="./images/ph.png" alt="image did not load"/>
-        <img src="./images/ph.png" alt="image did not load"/>
+        <img src="./images/hp bottom 1.png" alt="image did not load"/>
+        <img src="./images/hp botton2.png" alt="image did not load"/>
+        <img src="./images/hp bottom 3.png" alt="image did not load"/>
+        <img src="./images/hp bottom 4.png" alt="image did not load"/>
       </div>
   
   </body>
