--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="HPcontainerC">
     <p>
 Velma D. <br>
-User experience researcher 
+User Experience Designer 
 <a title="solving your design mysteries!" href="https://en.wikipedia.org/wiki/Velma_Dinkley" target="_blank" class="beFancy"
  style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
 <img src="./images/icons8-search (1).svg" alt="??" loading="eager" class="imgIntro"></a>
@@ -36,6 +36,8 @@ transformation and experience orchestration.
 Works closely with strategists, design, product realization, internal thought leadership. 
     </p>
   </div>
+
+  <div class="HPbox">
 
   <div class="HPcontainerL">
   <img src="./images/meridian.png" alt="image did not load"/>
@@ -49,14 +51,13 @@ Works closely with strategists, design, product realization, internal thought le
 
 
 <div class="HPcontainerR">
-  <div class="plzwork">
+  
     <img src="./images/the bright app.png" alt="image did not load"/>
     <p>
       The Bright App
       A redesign of a marketing website to drive in more app 
       downloads and communicate the app’s market value proposition to two markets
     </p>
-  </div>
 </div>
 
 <div class="HPcontainerL">
@@ -67,15 +68,15 @@ Works closely with strategists, design, product realization, internal thought le
     application for easy staff training and shorter wait times to return items
   </p>
 </div>
+</div>
 
 
 <footer>
+  <a> Contact Me: </a>
   <a href="#"> Email</a>
   <a href="#"> Instagram</a>
   <a href="#"> Pinterest</a>
   <a href="#"> LinkedIn</a>
-
-
 </footer>
 
 
