--- a/casestudy.html
+++ b/casestudy.html
@@ -24,8 +24,8 @@
 
       
       <div class="CScontainerCcol">
-        <img src="./images/ph.png" alt="image did not load"/>
-        <p> The problem <br>
+        <img src="./images/help-scout-vector-logo.png" alt="image did not load"/>
+        <p> <strong>The problem </strong> <br>
           The first iteration of the Beacon SDK by Help Scout focused on getting 
           the core functionality found in its web counterpart: 
           self-service and message sending, into a mobile-friendly build. What it lacked, however, 
