--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <p>
 Velma D. <br>
 User Experience Designer 
-<a title="solving your design mysteries!" href="https://en.wikipedia.org/wiki/Velma_Dinkley" target="_blank" class="beFancy"
- style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+<a title="solving your design mysteries!" href="https://en.wikipedia.org/wiki/Velma_Dinkley" target="_blank">
 <img src="./images/icons8-search (1).svg" alt="??" loading="eager" class="imgIntro"></a>
 for client projects in digital 
 transformation and experience orchestration. 
