--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="./styles/style.css" />
       <link rel="stylesheet" media="screen and (max-width:700px)" href="./styles/mobile.css" />
       <link rel="stylesheet" media="screen and (min-width:700px)" href="./styles/desktop.css" />
+      <link href='https://fonts.googleapis.com/css?family=Cormorant Garamond' rel='stylesheet'>
     </head>
    
 <body>
@@ -17,16 +18,16 @@
     <!-- We should unfuck this menu -->
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-    <li><a href="/index.html">Home</a></li>
-      <li><a href="/casestudy.html">My Work</a></li>
-      <li><a href="/about.html">About</a></li>
+    <li><a href=".index.html">Home</a></li>
+      <li><a href="./casestudy.html">My Work</a></li>
+      <li><a href="./about.html">About</a></li>
     </ul>
   </header>
 
 
   <div class="HPcontainerC">
     <p>
-Velma D. <br>
+    <b>Velma D.</b><br>
 User Experience Designer 
 <a title="solving your design mysteries!" href="https://en.wikipedia.org/wiki/Velma_Dinkley" target="_blank">
 <img src="./images/icons8-search (1).svg" alt="??" loading="eager" class="imgIntro"></a>
