--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" media="screen and (max-width:700px)" href="./styles/mobile.css" />
     <link rel="stylesheet" media="screen and (min-width:700px)" href="./styles/desktop.css" />
-</head>
+    <link href='https://fonts.googleapis.com/css?family=Cormorant Garamond' rel='stylesheet'>
+  </head>
  
 <body>
 <header class="header">
