--- a/casestudy.html
+++ b/casestudy.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" media="screen and (max-width:700px)" href="styles/mobile.css" />
         <link rel="stylesheet" media="screen and (min-width:700px)" href="styles/desktop.css" />
+        <link href='https://fonts.googleapis.com/css?family=Cormorant Garamond' rel='stylesheet'>
       </head>
   <body>
 
