--- a/about.html
+++ b/about.html
@@ -24,14 +24,13 @@
 <main id="home">
 
 <div id="aboutContainerCenter">
-<h1> About Me </h1>
+<h1> About</h1>
 </div>
 
 <div id="aboutContainerContent">
-  <p> Some facts about me. Before design, I was a librarian - at the time, I remember feeling like I needed more of a challenge. 
-    After that realization, I quickly transferred my organizational skills to a UX/UI skillset to help build the right product for the right user. At the end of the day, 
-    I’m someone who really prioritizes collaboration and teamwork  (with emphasis on good reason for every design decision).
-    I’m a UX designer at work, but also a lover of true crime mysteries, fluffy dogs, anime, film photography, and interior decor. </p>
+  <p> I am Velma a designer currently based in Fort Lauderdale, Florida 
+SOME FACTS ABOUT ME!  I've lived in Manila, California, Amsterdam and Berlin. At the moment, I'm a Product Designer at Air. My interests include history, travel, animals, and true crime mysteries
+<br> You can reach me at: velmascoob@velma.com</p>
   <img src="./images/velma 3.jpeg" alt="Velma D. Img"/>
 </div>
     
