--- a/casestudy.html
+++ b/casestudy.html
@@ -23,59 +23,61 @@
       </head>
   <body>
 
-      
+      <div id="aboutContainerCenter">
+<h1> My Work</h1>
+</div>
       <div class="CScontainerCcol">
-        <img src="./images/help-scout-vector-logo.png" alt="image did not load"/>
-        <p> <strong>The problem </strong> <br>
-          The first iteration of the Beacon SDK by Help Scout focused on getting 
-          the core functionality found in its web counterpart: 
-          self-service and message sending, into a mobile-friendly build. What it lacked, however, 
-          was a primary focus on the mobile experience.
-          Some design patterns were taken from the web that did not 
-          quite gel with a mobile user's expectations. I worked on making the 
-          transition to a more native feel, while reworking the UX and the UI.</p>
+        <img src="./images/unsplash_ND3edEmzcdQ@2x.png" alt="image did not load"/>
+        <p> <strong>RECIPE CREATION TOOL</strong> <br>
+          Encouraging home cooks to share their recipes within the Kitchen Stories community</p>
       </div>
   
       <div class="CScontainerCrow">
-        <p> UX Designer Prototyping left aligned
+        <p> ROLE:
+          Product Designer <br>
+          
+          TEAM:
+          1 Product Designer
+          6 Engineers <br>
+          PROJECT TYPE:
+          Mobile (Android & IOS) <br>
+          YEAR: 2021
         </p>
-        <p> 2020-2021right aligned </p>
+        <p> Kitchen Stories is a digital cooking platform with content being created by both our editors and users. The product an tech team developed a recipe creation tool that enabled users to share their recipes with 3 million fellow cooking enthusiasts on the Kitchen stories app. </p>
       </div>
   
       <div class="CScontainerCcol">
-        <p> Crafting for mobile
-          Users have come to expect specific design patterns 
-          when using their phones, even if they aren't aware of it. 
-          Searching is generally at the top; swiping left takes you back. 
-          All ingrained into us through repetition.
+        <p> FEATURE OVERVIEW
         </p>
       </div>
   
       <!-- What is going on with alignment  -->
 
       <div class="CScontainerCrow CSmidIMG">
-        <p> text 5 </p>
-        <img src="./images/Screen Shot 2021-10-27 at 7.50.28 PM.png" alt="image did not load"/>
+        <p>Creating a recipe <br>
+          The main feature of this project was to allow the user to publish their recipe on the Kitchen Stories platform through a series of steps. 
+          The creation process was designed so that the output would be in the same format as existing Kitchen Stories recipes. </p>
+        <img src="./images/unsplash_kcA-c3f_3FE.png" alt="image did not load"/>
       </div>
   
       <div class="CScontainerCrow CSmidIMG">
-        <img src="./images/Screen Shot 2021-10-27 at 7.51.10 PM.png" alt="image did not load"/>
-        <p> text 6  </p>
+        <img src="./images/unsplash_jpkfc5_d-DI.png" alt="image did not load"/>
+        <p> Author Attributes <br>
+          Prior to launch, dish tiles had no assigned author because all recipes were simply developed by the in-house test kitchen. With user recipes now being added to the mix, there was a need to give credit to authors and differentiate recipes 
+          that are by Kitchen Stories, brand partners and the community of users.   </p>
       </div>
   
       <div class="CScontainerCcol">
-        <p>Help Scout's Beacon's core experience 
-          was adjusted to make it feel part of the platforms we were developing 
-          for, while maintaining Beacons' own sense of visual identity.
+        <p>READ THE FULL CASE STUDY
 
         </p>
       </div>
   
       <div class="CScontainerCrow">
-        <img src="./images/hp bottom 1.png" alt="image did not load"/>
-        <img src="./images/hp botton2.png" alt="image did not load"/>
-        <img src="./images/hp bottom 3.png" alt="image did not load"/>
-        <img src="./images/hp bottom 4.png" alt="image did not load"/>
+        <img src="./images/1.png" alt="image did not load"/>
+        <img src="./images/2.png" alt="image did not load"/>
+        <img src="./images/3.png" alt="image did not load"/>
+        <img src="./images/4.png" alt="image did not load"/>
       </div>
   
   </body>
