--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" media="screen and (max-width:700px)" href="./styles/mobile.css" />
       <link rel="stylesheet" media="screen and (min-width:700px)" href="./styles/desktop.css" />
       <link href='https://fonts.googleapis.com/css?family=Cormorant Garamond' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'>
     </head>
    
 <body>
@@ -27,53 +28,51 @@
 
   <div class="HPcontainerC">
     <p>
-    <b>Velma D.</b><br>
-User Experience Designer 
+    <b>Velma S.</b><br>
+User Experience Designer & Researcher
 <a title="solving your design mysteries!" href="https://en.wikipedia.org/wiki/Velma_Dinkley" target="_blank">
 <img src="./images/icons8-search (1).svg" alt="??" loading="eager" class="imgIntro"></a>
-for client projects in digital 
-transformation and experience orchestration. 
-Works closely with strategists, design, product realization, internal thought leadership. 
+born in florida, raised in ohio. loves solving mysteries and traveling with the gang 
     </p>
   </div>
 
   <div class="HPbox">
 
   <div class="HPcontainerL">
-  <img src="./images/meridian.png" alt="image did not load"/>
+  <img src="./images/hp1.png" alt="image did not load"/>
   <p>
-    Meridian
-    A retail analytics and performance 
-    app to improve customer service and 
-    employee training for higher sales across regions
+    PRODUCT DESIGN
+recipe creation tool </br>
+Encouraging home cooks to share their recipes within the Kitchen Stories community.
   </p>
 </div>
 
 
 <div class="HPcontainerR">
   
-    <img src="./images/the bright app.png" alt="image did not load"/>
+    <img src="./images/hpr.png" alt="image did not load"/>
     <p>
-      The Bright App
-      A redesign of a marketing website to drive in more app 
-      downloads and communicate the app’s market value proposition to two markets
+     
+BRAND REDESIGN <br>
+kitchen stories
+Brand redesign for an award-winning cooking app.
     </p>
 </div>
 
 <div class="HPcontainerL">
-  <img src="./images/liff happens.png" alt="image did not load"/>
+  <img src="./images/hp3.png" alt="image did not load"/>
   <p>
-    Liff Happens
-    The total redesign of a lost-and-found 
-    application for easy staff training and shorter wait times to return items
+    PRODUCT DESIGN <br>
+
+poll feature
+Determining user preferences by collecting data points through interactive poll questions.
   </p>
 </div>
 </div>
 
 
 <footer>
-  <a> Contact Me: </a>
-  <a href="#"> Email</a>
+  <a href="#"> Email Me: velmascoob@velma.com</a>
   <a href="#"> Instagram</a>
   <a href="#"> Pinterest</a>
   <a href="#"> LinkedIn</a>
