--- a/casestudy.html
+++ b/casestudy.html
@@ -1,9 +1,9 @@
  <!DOCTYPE html>
   <html lang="en">
       <header class="header">
+          <img src="./images/Logo.png" alt="god save the queen" />
           <a href="" class="logo"></a>
           <input class="menu-btn" type="button" id="menu-btn" />
-          <!-- We should unfuck this menu -->
           <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
           <ul class="menu">
           <li><a href="/index.html">Home</a></li>
@@ -23,7 +23,7 @@
       </head>
   <body>
 
-      <div id="aboutContainerCenter">
+      <div id="csCenter">
 <h1> My Work</h1>
 </div>
       <div class="CScontainerCcol">
