--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <header class="header">
     <a href="" class="logo"></a>
+    <img src="./images/Logo.png" alt="god save the queen" />
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <!-- We should unfuck this menu -->
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -28,7 +29,6 @@
 
   <div class="HPcontainerC">
     <p>
-    <b>Velma S.</b><br>
 User Experience Designer & Researcher
 <a title="solving your design mysteries!" href="https://en.wikipedia.org/wiki/Velma_Dinkley" target="_blank">
 <img src="./images/icons8-search (1).svg" alt="??" loading="eager" class="imgIntro"></a>
