--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
  
 <body>
 <header class="header">
+  <img src="./images/Logo.png" alt="god save the queen" />
   <a href="" class="logo"></a>
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
