--- a/casestudy.html
+++ b/casestudy.html
@@ -1,29 +1,33 @@
- <!DOCTYPE html>
-  <html lang="en">
-      <header class="header">
-          <img src="./images/Logo.png" alt="god save the queen" />
-          <a href="" class="logo"></a>
-          <input class="menu-btn" type="button" id="menu-btn" />
-          <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-          <ul class="menu">
-          <li><a href="/index.html">Home</a></li>
-            <li><a href="/casestudy.html">My Work</a></li>
-            <li><a href="/about.html">About</a></li>
-          </ul>
-        </header>
-      
-        <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Velma Portfolio</title>
-        <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" media="screen and (max-width:700px)" href="styles/mobile.css" />
-        <link rel="stylesheet" media="screen and (min-width:700px)" href="styles/desktop.css" />
-        <link href='https://fonts.googleapis.com/css?family=Cormorant Garamond' rel='stylesheet'>
-      </head>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
 
+      <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Velma Portfolio</title>
+      <link rel="stylesheet" href="./styles/style.css" />
+      <link rel="stylesheet" media="screen and (max-width:700px)" href="./styles/mobile.css" />
+      <link rel="stylesheet" media="screen and (min-width:700px)" href="./styles/desktop.css" />
+      <link href='https://fonts.googleapis.com/css?family=Cormorant Garamond' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'>
+    </head>
+   
+<body>
+  <header class="header">
+    <a href="" class="logo"></a>
+    <img src="./images/Logo.png" alt="god save the queen" />
+    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <!-- We should unfuck this menu -->
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+    <ul class="menu">
+    <li><a href=".index.html">Home</a></li>
+      <li><a href="./casestudy.html">My Work</a></li>
+      <li><a href="./about.html">About</a></li>
+    </ul>
+  </header>
+  
       <div id="csCenter">
+
 <h1> My Work</h1>
 </div>
       <div class="CScontainerCcol">
