lets be donesies

--- a/casestudy.html
+++ b/casestudy.html
@@ -66,7 +66,7 @@
       </div>
   
       <div class="CScontainerCrow CSmidIMG">
-        <img src="./images/csl.png" alt="image did not load"/>
+        <img src="./images/cstop.png" alt="image did not load"/>
         <p class="wtf"> Author Attributes <br>
           Prior to launch, dish tiles had no assigned author because all recipes were simply developed by the in-house test kitchen. With user recipes now being added to the mix, there was a need to give credit to authors and differentiate recipes 
           that are by Kitchen Stories, brand partners and the community of users.   </p>
@@ -85,14 +85,13 @@
         <img src="./images/4.png" alt="image did not load"/>
       </div>
   
-
 <footer class="footer">
   <a href="#"> Email Me: velmascoob@velma.com</a>
-  <a href="#"> Instagram</a>
-  <a href="#"> Pinterest</a>
-  <a href="#"> LinkedIn</a>
+  <a href="https://www.instagram.com/scoobydoo/"> Instagram</a>
+  <a href="https://www.pinterest.com/scoobydoo/_created/"> Pinterest</a>
+  <a href="https://www.linkedin.com/in/velma-dinkley-7345b56/"> LinkedIn</a>
 </footer>
 
-
+      
   </body>
   </html>
