--- a/about.html
+++ b/about.html
@@ -39,10 +39,11 @@ SOME FACTS ABOUT ME!  I've lived in Manila, California, Amsterdam and Berlin. At
 
 <footer class="footer">
   <a href="#"> Email Me: velmascoob@velma.com</a>
-  <a href="https://www.instagram.com/scoobydoo/"> Instagram</a>
-  <a href="https://www.pinterest.com/scoobydoo/_created/"> Pinterest</a>
-  <a href="https://www.linkedin.com/in/velma-dinkley-7345b56/"> LinkedIn</a>
+  <a href="https://www.instagram.com/scoobydoo/" target="_blank"> Instagram</a>
+  <a href="https://www.pinterest.com/scoobydoo/_created/" target="_blank"> Pinterest</a>
+  <a href="https://www.linkedin.com/in/velma-dinkley-7345b56/" target="_blank"> LinkedIn</a>
 </footer>
+
 
 
 </body>
