--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@ Determining user preferences by collecting data points through interactive poll 
 
 <footer class="footer">
   <a href="#"> Email Me: velmascoob@velma.com</a>
-  <a href="https://www.instagram.com/scoobydoo/"> Instagram</a>
-  <a href="https://www.pinterest.com/scoobydoo/_created/"> Pinterest</a>
-  <a href="https://www.linkedin.com/in/velma-dinkley-7345b56/"> LinkedIn</a>
+  <a href="https://www.instagram.com/scoobydoo/" target="_blank"> Instagram</a>
+  <a href="https://www.pinterest.com/scoobydoo/_created/" target="_blank"> Pinterest</a>
+  <a href="https://www.linkedin.com/in/velma-dinkley-7345b56/" target="_blank"> LinkedIn</a>
 </footer>
 
 
